--- a/simple_frontend/index.html
+++ b/simple_frontend/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="workout.js"></script>
     </head>
     <body>
         <h1>Simple Daily Workout Randomizer</h1>
         <div id="content-area">
 
         </div>
-        <button onclick="randomize()">Randomize!</button>
+            <label>Workout Type: </label>
+            <input id="workout-input" type="text"></input>
+            <button onclick="update()">Add</button>
+        <button onclick="refresh()">Refresh</button>
     </body>
+    <script src="workout.js"></script>
 </html>
