--- a/simple_frontend/index.html
+++ b/simple_frontend/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.0/build/pure-min.css" integrity="" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Daily Workout Randomizer</h1>
-        <div id="content-area">
-
+        <div class="pure-g">
+            <div class="pure-u-1-3"></div>
+            <div class="card pure-u-1-3">
+                <h2>Simple Daily Workout Randomizer</h2>
+                <div id="content-area">
+        
+                </div>
+            </div>
+            <div class="pure-u-1-3"></div>
         </div>
-        <label>Workout Type: </label>
-        <input id="workout-input" type="text"></input>
-        <button onclick="update()">Add</button>
-        <br /><br />
-        <button onclick="refresh()">Refresh</button>
+        <div class="pure-g">
+            <div class="pure-u-1-3"></div>
+            <div class="card pure-u-1-3">
+                <form class="pure-form" id="form">  
+                    <label for="workout-input">Workout Type: </label>
+                    <input id="workout-input" type="text"></input>
+                    <button class="pure-button" onclick="update()">Add</button>
+                    <br /><br />
+                    <button class="pure-button" onclick="refresh()">Refresh</button>
+                </form>
+            </div>
+            <div class="pure-u-1-3"></div>
+        </div>
     </body>
     <script src="workout.js"></script>
 </html>
