added pages and links

--- a/simple_frontend/dailyWorkout.html
+++ b/simple_frontend/dailyWorkout.html
@@ -8,14 +8,9 @@
         <div class="pure-g">
             <div class="pure-u-1-3"></div>
             <div class="card pure-u-1-3">
-                <h2>ScratchPad Links</h2>
-                <ul>
-                    <li class="pure-button link-button">
-                        <a href="workoutRandomizer1.html">WorkoutRandomizerJS</a>
-                    </li>
-                    <li class="pure-button link-button">
-                        <a href="dailyWorkout.html">Daily Workout (MongoDB Atlas)</a>
-                    </li>
+                <h2>Here's Your Workout For Today:</h2>
+                <ul id="workout-list">
+
                 </ul>
             </div>
             <div class="pure-u-1-3"></div>
