connected via stitch

--- a/simple_frontend/dailyWorkout.html
+++ b/simple_frontend/dailyWorkout.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.0/build/pure-min.css" integrity="" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.6.0/stitch.js"></script>
     </head>
     <body>
         <div class="pure-g">
