--- a/simple_frontend/dailyWorkout.html
+++ b/simple_frontend/dailyWorkout.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html id="daily-workout-body">
     <head>
         <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.0/build/pure-min.css" integrity="" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.6.0/stitch.js"></script>
     </head>
     <body>
-        <div class="pure-g">
-            <div class="pure-u-1-3"></div>
-            <div class="card pure-u-1-3">
+        <div class="pure-g" id="">
+            <div class="card pure-u-1-1">
+                <h2>Configuration</h2>
+                <form>
+
+                </form>
+            </div>
+        </div>
+        <div class="pure-g" hidden>
+            <div class="card pure-u-1-1">
                 <h2>Here's Your Workout For Today:</h2>
                 <ul id="workout-list">
 
                 </ul>
             </div>
-            <div class="pure-u-1-3"></div>
         </div>
     </body>
     <script src="get-workout.js"></script>
