shows workout div after load of exercises

--- a/simple_frontend/dailyWorkout.html
+++ b/simple_frontend/dailyWorkout.html
@@ -6,7 +6,7 @@
         <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.6.0/stitch.js"></script>
     </head>
     <body>
-        <div class="pure-g" id="">
+        <div class="pure-g" id="configuration">
             <div class="card pure-u-1-1">
                 <h2>Configuration</h2>
                 <form>
@@ -14,7 +14,7 @@
                 </form>
             </div>
         </div>
-        <div class="pure-g" hidden>
+        <div class="pure-g" id="workout-container" hidden>
             <div class="card pure-u-1-1">
                 <h2>Here's Your Workout For Today:</h2>
                 <ul id="workout-list">
