implemented some config and generation

--- a/simple_frontend/dailyWorkout.html
+++ b/simple_frontend/dailyWorkout.html
@@ -32,7 +32,7 @@
                             <label for="type-exercises">
                                 Select Exercise Focus:
                             </label>
-                            <select id="type-exercises">
+                            <select id="type-exercises" disabled>
                                 <option value="upper">Upper Body</option>
                                 <option value="lower">Lower Body</option>
                                 <option value="core">Core</option>
